--- a/src/index.css
+++ b/src/index.css
@@ -6,3 +6,14 @@ body {
   -moz-osx-font-smoothing: grayscale;
   background-image: linear-gradient(to left, rgb(27 20 41), rgb(20 15 35));
 }
+
+@import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&display=swap');
+a.navbar-brand h2 {
+font-family: 'Dancing Script', cursive;
+color: #886ce4;
+}
+
+div.footer-copywright.col-md-4 h3 span{
+font-family: 'Dancing Script', cursive;
+color: #FFF;
+}
