--- a/src/style.css
+++ b/src/style.css
@@ -249,6 +249,7 @@ html {
 
 .home-header {
   padding-top: 80px !important;
+  max-width: 52% !important;
 }
 
 .home-section {
@@ -333,8 +334,12 @@ html {
   text-align: left;
 }
 
-html body div#root div#scroll.App section div#about.home-about-section.container-fluid div.container div.row div.myAvtar.col-md-5 div img.img-fluid{
+div.myAvtar.col-md-5 div img.img-fluid{
   height: 425px;
+  border: 5px solid #fff;
+}
+
+div.about-img.col-md-5 img.img-fluid{
   border: 5px solid #fff;
 }
 
