About Complete (styling tbd)

--- a/src/style.css
+++ b/src/style.css
@@ -341,6 +341,9 @@ div.myAvtar.col-md-5 div img.img-fluid{
 
 div.about-img.col-md-5 img.img-fluid{
   border: 5px solid #fff;
+  max-width: 120%;
+
+  
 }
 
 .home-about-social {
@@ -404,6 +407,12 @@ div.about-img.col-md-5 img.img-fluid{
 .icon-colour {
   color: #700c86 !important;
 }
+
+blockquote.blockquote.mb-0 ul li.about-activity i{
+  padding-right: 5px;
+  padding-bottom: 10px;
+}
+
 
 /* --------- */
 /* Footer */
@@ -590,6 +599,21 @@ div.about-img.col-md-5 img.img-fluid{
   border: none !important;
   color: white !important;
   background-color: transparent !important;
+}
+
+blockquote.blockquote p{
+  text-align: justify;  
+}
+
+.blockquote-quote{
+  text-align: center !important;
+  margin-block-end: 0;
+  color: #9275d4;
+}
+
+.blockquote-footer {
+  margin-block-end: 0;
+  color: #9275d4 !important;
 }
 
 .about-activity {
