clean-up - removed extra imgs

--- a/src/style.css
+++ b/src/style.css
@@ -497,7 +497,7 @@ blockquote.blockquote.mb-0 ul li.about-activity i{
 }
 
 .project-button{
-  margin-top: 100%;
+  padding: 10px;
 }
 
 .card-img-top {
