--- a/src/style.css
+++ b/src/style.css
@@ -2,7 +2,7 @@ html {
   --section-background-color: linear-gradient(
     to bottom right,
     rgba(0, 0, 0, 0.582),
-    rgba(61, 10, 10, 0.904)
+    rgba(10, 19, 61, 0.904)
   );
 
   --image-gradient: linear-gradient(
@@ -11,7 +11,7 @@ html {
     rgba(0, 0, 0, 0.863)
   );
 
-  --imp-text-color: #e9a0ff;
+  --imp-text-color: #7991fa;
 }
 
 .purple {
@@ -28,7 +28,7 @@ html {
   width: 100%;
   height: 100%;
   z-index: 999999;
-  background-color: #0c0513;
+  background-color: #0b0b0f;
   background-image: url(./Assets/pre.svg);
   background-repeat: no-repeat;
   background-position: center;
@@ -53,18 +53,18 @@ html {
 
 /* Track */
 ::-webkit-scrollbar-track {
-  background: #2d1950;
+  background: #1a1950;
 }
 
 /* Handle */
 ::-webkit-scrollbar-thumb {
-  background: rgba(82, 56, 99, 0.959);
+  background: rgba(56, 67, 99, 0.959);
   border-radius: 12px;
 }
 
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
-  background: rgba(222, 130, 235, 0.911);
+  background: rgba(130, 149, 235, 0.911);
   border-radius: 12px;
 }
 
@@ -94,7 +94,7 @@ html {
 
 .navbar-toggler span {
   display: block !important;
-  background-color: #fa9ffa !important;
+  background-color: #9fa8fa !important;
   height: 4px !important;
   width: 27px !important;
   margin-top: 5px !important;
@@ -147,8 +147,8 @@ html {
     display: none !important;
   }
 }
-.navbar-brand {
-  color: rgb(250, 250, 250) !important;
+.navbar-brand h2{
+  color: #5f6ef8 !important;
 }
 
 .logo {
@@ -191,7 +191,7 @@ html {
   height: 5px;
   width: 0;
   border-radius: 16px;
-  background: #eab4ff;
+  background: #5f6ef8;
   bottom: 1px;
   left: 0;
   z-index: -1;
@@ -278,17 +278,17 @@ section{
 }
 
 .main-name {
-  color: #cd5ff8;
+  color: #5f6ef8;
 }
 
 .Typewriter__wrapper {
   font-size: 2.2em !important;
-  color: #be6adf !important;
+  color: #5f6ef8 !important;
   font-weight: 600 !important;
 }
 .Typewriter__cursor {
   font-size: 2.4em !important;
-  color: #b562d6 !important;
+  color: #888ec4 !important;
 }
 
 @media (max-width: 767px) {
@@ -304,7 +304,7 @@ section{
 
 .myAvtar {
   justify-content: center !important;
-  padding-top: 9em !important;
+  padding-top: 18em !important;
 }
 
 @media (max-width: 767px) {
@@ -339,10 +339,13 @@ div.myAvtar.col-md-5 {
   width: auto;
 }
 
+div.tilt video{
+  border: 5px solid #fff;
+}
 
 div.about-img.col-md-5 img.img-fluid{
   border: 5px solid #fff;
-  max-width: 120%;
+  max-width: 100%;
   width: 100%;
   height: auto;
 
@@ -388,7 +391,7 @@ div.about-img.col-md-5 img.img-fluid{
   width: 100%;
   height: 100%;
   border-radius: 50%;
-  background: #68187a;
+  background: #9fa8fa;
   transition: 0.5s;
   transform: scale(0.9);
   z-index: -1;
@@ -396,13 +399,13 @@ div.about-img.col-md-5 img.img-fluid{
 
 .home-social-icons:hover::before {
   transform: scale(1.1);
-  box-shadow: 0 0 15px #801f95;
+  box-shadow: 0 0 15px #9fa8fa;
 }
 
 .home-social-icons:hover {
-  color: #87209e;
-  box-shadow: 0 0 5px #87209e;
-  text-shadow: 0 0 2px #87209e;
+  color: #9fa8fa;
+  box-shadow: 0 0 5px #9fa8fa;
+  text-shadow: 0 0 2px #9fa8fa;
 }
 
 .social-icons {
@@ -412,7 +415,7 @@ div.about-img.col-md-5 img.img-fluid{
 }
 
 .icon-colour {
-  color: #700c86 !important;
+  color: #5766f0 !important;
 }
 
 blockquote.blockquote.mb-0 ul li.about-activity i{
@@ -425,7 +428,7 @@ blockquote.blockquote.mb-0 ul li.about-activity i{
 /* Footer */
 /* --------- */
 .footer {
-  background-color: rgb(10, 4, 22);
+  background-color: #212038d8;
   bottom: 0 !important;
   padding-top: 10px !important;
   padding-bottom: 8px !important ;
@@ -461,7 +464,7 @@ blockquote.blockquote.mb-0 ul li.about-activity i{
 }
 
 .blockquote-footer {
-  color: #a588c0 !important;
+  color: #7991fa !important;
 }
 /* --------- */
 /* Projects */
@@ -487,7 +490,7 @@ blockquote.blockquote.mb-0 ul li.about-activity i{
 }
 
 .project-card-view {
-  box-shadow: 0 4px 5px 3px rgba(119, 53, 136, 0.459) !important;
+  box-shadow: 0 4px 5px 3px rgba(53, 68, 136, 0.459) !important;
   color: white !important;
   background-color: transparent !important;
   opacity: 0.9 !important;
@@ -497,7 +500,7 @@ blockquote.blockquote.mb-0 ul li.about-activity i{
 .project-card-view:hover {
   transform: scale(1.02) !important;
   overflow: hidden !important;
-  box-shadow: 0 4px 4px 5px rgba(129, 72, 144, 0.561) !important;
+  box-shadow: 0 4px 4px 5px rgba(72, 95, 144, 0.561) !important;
 }
 
 .project-text{
@@ -522,14 +525,14 @@ blockquote.blockquote.mb-0 ul li.about-activity i{
 
 .btn-primary {
   color: #fff !important;
-  background-color: #623686 !important;
-  border-color: #623686 !important;
+  background-color: #3a49cfd7 !important;
+  border-color: #bed4ffbe !important;
 }
 
 .btn-primary:hover {
   color: #fff !important;
-  background-color: #6d20c5d7 !important;
-  border-color: #6d20c5d7 !important;
+  background-color: #7991fa !important;
+  border-color: #7991fa !important;
 }
 .btn:focus {
   outline: none !important;
@@ -562,14 +565,14 @@ blockquote.blockquote.mb-0 ul li.about-activity i{
   font-size: 4.5em !important;
   margin: 15px !important;
   opacity: 0.93 !important;
-  border: 1.7px solid rgba(200, 137, 230, 0.637) !important;
+  border: 1.7px solid #3a49cfd7 !important;
   vertical-align: middle !important;
   text-align: center !important;
   border-radius: 5px !important;
   display: table !important;
-  box-shadow: 4px 5px 4px 3px rgba(89, 4, 168, 0.137) !important;
+  box-shadow: 4px 5px 4px 3px rgba(117, 119, 122, 0.137) !important;
   overflow: hidden !important;
-  transition: all 0.4s ease 0s !important;
+  transition: all 0.2s ease 0s !important;
 }
 
 @media (max-width: 767px) {
@@ -581,7 +584,7 @@ blockquote.blockquote.mb-0 ul li.about-activity i{
 .tech-icons:hover {
   transform: scale(1.05) !important;
   overflow: hidden !important;
-  border: 2.2px solid rgba(197, 115, 230, 0.883) !important;
+  border: 2.2px solid #9fa8fa !important;
 }
 .tech-icon-images {
   padding: 20px !important;
@@ -601,12 +604,12 @@ blockquote.blockquote p{
 .blockquote-quote{
   text-align: center !important;
   margin-block-end: 0;
-  color: #9275d4;
+  color: var(--imp-text-color);
 }
 
 .blockquote-footer {
   margin-block-end: 0;
-  color: #9275d4 !important;
+  color: var(--imp-text-color);
 }
 
 .about-activity {
@@ -669,14 +672,14 @@ blockquote.blockquote p{
 .resume .resume-item {
   padding: 0 0 10px 25px;
   margin-top: -2px;
-  border-left: 2px solid #8a49a8;
+  border-left: 2px solid var(--imp-text-color);;
   position: relative;
 }
 
 .resume .resume-item .resume-title {
   line-height: 18px;
   font-size: 0.9em;
-  background: #5234795d;
+  background:  #7991fa;
   padding: 8px 15px;
   display: inline-block;
   font-weight: 600;
@@ -705,63 +708,6 @@ blockquote.blockquote p{
   border-radius: 50px;
   left: -9px;
   top: 0;
-  background: #fff;
-  border: 2px solid #8a49a8;
-}
-
-.like-item {
-  padding-top: 10px !important;
-  font-size: 1.1em !important;
-  font-family: sans-serif !important;
-}
-
-.like-btn {
-  background-color: #934cce5e !important;
-  border-color: #934cce5e !important;
-  padding: 0.25rem 0.98rem !important;
-  border-radius: 5px !important;
-  line-height: 1.4 !important;
-  transition: 0.3s ease !important;
-}
-
-.like-btn:hover {
-  transform: translateY(-2px) !important;
-  background-color: #a24dd386 !important;
-  border-color: #a24dd386 !important;
-}
-
-.animate-like {
-  animation-name: likeAnimation;
-  animation-fill-mode: forwards;
-  animation-duration: 0.85s;
-}
-@keyframes likeAnimation {
-  0% {
-    transform: scale(1.5);
-  }
-  100% {
-    transform: scale(1);
-  }
-}
-
-.fork-btn {
-  font-size: 1.1em !important;
-  padding-top: 10px !important;
-}
-
-.fork-btn-inner {
-  line-height: 1.4em !important;
-  background-color: #934cce5e !important;
-  padding: 0.25rem 1.1rem !important;
-  vertical-align: middle !important;
-  text-align: center !important;
-}
-
-.fork-btn-inner:hover {
-  transform: translateY(-2px) !important;
-  background-color: #a24dd386 !important;
-  border-color: #a24dd386 !important;
-}
-.fork-btn-inner::after {
-  display: none !important;
+  background: #353535;
+  border: 2px solid #7991fa;
 }
